--- a/about-me.html
+++ b/about-me.html
@@ -73,7 +73,7 @@
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
