--- a/gsoc-2014-with-sympy.html
+++ b/gsoc-2014-with-sympy.html
@@ -10,11 +10,10 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC 2014 with&nbsp;SymPy" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="My proposal is intended to add more to optics in SymPy. Till now it can only do computations related to Gaussian optics and a bit of geometrical optics. Ondřej Čertík and Sean Vig are my mentors for the project. For those who don’t know what is SymPy, SymPy is ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC 2014 with&nbsp;SymPy" />
-        <meta name="twitter:description" content="My proposal is intended to add more to optics in SymPy. Till now it can only do computations related to Gaussian optics and a bit of geometrical optics. Ondřej Čertík and Sean Vig are my mentors for the project. For those who don’t know what is SymPy, SymPy is ..." />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc-2014-with-sympy" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -114,7 +113,7 @@ and SymPy for this&nbsp;opportunity!</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
