--- a/gsoc14-progress-week-4-finished-medium-working-on-fermats-principle-and-snells-law.html
+++ b/gsoc14-progress-week-4-finished-medium-working-on-fermats-principle-and-snells-law.html
@@ -10,11 +10,10 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | GSoC&#8216;14 progress, week 4: finished medium, working on Fermat&#8217;s principle and Snell&#8217;s&nbsp;law" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="It was a great week! My last to last PR, on enhancing TWave, got merged! I have alsofinishedMedium and waiting for Sean’s comments on it. Here’s the link to that PR: https://github.com/sympy/sympy/pull/7580 I still have a todo in the tests: m5 ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 progress, week 4: finished medium, working on Fermat&#8217;s principle and Snell&#8217;s&nbsp;law" />
-        <meta name="twitter:description" content="It was a great week! My last to last PR, on enhancing TWave, got merged! I have alsofinishedMedium and waiting for Sean’s comments on it. Here’s the link to that PR: https://github.com/sympy/sympy/pull/7580 I still have a todo in the tests: m5 ..." />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-4-finished-medium-working-on-fermats-principle-and-snells-law" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -122,7 +121,7 @@ principle and Snell&#8217;s law part of the code and send a <span class="caps">P
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
