--- a/linux-and-lenovo-essential-g580.html
+++ b/linux-and-lenovo-essential-g580.html
@@ -10,11 +10,10 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Linux and Lenovo Essential&nbsp;G580" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="Lenovo Essential G580 is the laptop which has highest number of conflicts with aLinux OS. The biggest problem is when you install a Linux OS you will lose access to your BIOS setup and that’s permanent. I faced this problem and I sent my laptop to service center to ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Linux and Lenovo Essential&nbsp;G580" />
-        <meta name="twitter:description" content="Lenovo Essential G580 is the laptop which has highest number of conflicts with aLinux OS. The biggest problem is when you install a Linux OS you will lose access to your BIOS setup and that’s permanent. I faced this problem and I sent my laptop to service center to ..." />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/linux-and-lenovo-essential-g580" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -110,7 +109,7 @@ do is to prevent yourself from buying this&nbsp;laptop.</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
