--- a/managing-commits-and-working-with-git-diff.html
+++ b/managing-commits-and-working-with-git-diff.html
@@ -10,11 +10,10 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Managing commits and working with git&nbsp;diff" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="tl;dr: This post assumes that you have basic knowledge of git. It’s just about managing commits and minimizing their numbers by having only meaningful ones. I’ve been working on a PR for around thirteen days which aims to fix a bug related to mathematical assumptions for inverse ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Managing commits and working with git&nbsp;diff" />
-        <meta name="twitter:description" content="tl;dr: This post assumes that you have basic knowledge of git. It’s just about managing commits and minimizing their numbers by having only meaningful ones. I’ve been working on a PR for around thirteen days which aims to fix a bug related to mathematical assumptions for inverse ..." />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/managing-commits-and-working-with-git-diff" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -139,7 +138,7 @@ to write a blog post about&nbsp;it.</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
