--- a/easy-caching-in-android.html
+++ b/easy-caching-in-android.html
@@ -10,11 +10,10 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Easy caching in&nbsp;Android" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="Recently I found a better way to cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value pairs. Android SDK comes with an API called android ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Easy caching in&nbsp;Android" />
-        <meta name="twitter:description" content="Recently I found a better way to cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value pairs. Android SDK comes with an API called android ..." />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/easy-caching-in-android" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -150,7 +149,7 @@ comment below. I’ll be happy to get&nbsp;feedback.</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
