--- a/memory-error-due-to-charge-leak-acceleration-in-dram.html
+++ b/memory-error-due-to-charge-leak-acceleration-in-dram.html
@@ -10,11 +10,10 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Memory Error due to charge leak acceleration in <span class="caps">DRAM</span>" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="DRAM comprises a two-dimensional array of DRAM cells, each of which consists of a capacitor and an access-transistor. Depending on whether its capacitor is fully charged or fully discharged, a cell is in either the charged state or the discharged state, respectively. These two states are used to represent a ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Memory Error due to charge leak acceleration in <span class="caps">DRAM</span>" />
-        <meta name="twitter:description" content="DRAM comprises a two-dimensional array of DRAM cells, each of which consists of a capacitor and an access-transistor. Depending on whether its capacitor is fully charged or fully discharged, a cell is in either the charged state or the discharged state, respectively. These two states are used to represent a ..." />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/memory-error-due-to-charge-leak-acceleration-in-dram" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -151,7 +150,7 @@ Causes and Impact on Memory Tests. In <span class="caps">DELTA</span>,&nbsp;2002
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
