--- a/two-things-dockerizing-applications-and-aws-on-the-house-services.html
+++ b/two-things-dockerizing-applications-and-aws-on-the-house-services.html
@@ -10,11 +10,10 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Shortlog | Two things: Dockerizing Applications and <span class="caps">AWS</span>&#8217; on the house&nbsp;services" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta property="og:description" content="Lately I migrated my app from DigitalOcean to AWS and encountered the pain of setting up similar environment.(Documenting everything is very important!) I heard long ago about Docker but never bothered to tinker with it. If you don’t know, Docker is a platform for developers and sysadmins to ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
         <meta name="twitter:title" content="Shortlog | Two things: Dockerizing Applications and <span class="caps">AWS</span>&#8217; on the house&nbsp;services" />
-        <meta name="twitter:description" content="Lately I migrated my app from DigitalOcean to AWS and encountered the pain of setting up similar environment.(Documenting everything is very important!) I heard long ago about Docker but never bothered to tinker with it. If you don’t know, Docker is a platform for developers and sysadmins to ..." />
+        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/two-things-dockerizing-applications-and-aws-on-the-house-services" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
@@ -125,7 +124,7 @@ weeks!&nbsp;Cheers!</p>
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
