--- a/easy-caching-in-android.html
+++ b/easy-caching-in-android.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/easy-caching-in-android" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | Easy caching in&nbsp;Android" />
+        <meta property="og:title" content="Shortlog | Easy caching in Android" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="Recently I found a better way to cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value pairs. Android SDK comes with an API called android ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | Easy caching in&nbsp;Android" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | Easy caching in Android" />
+        <meta name="twitter:description" content="Recently I found a better way to cache data in Android. It can also be used to save preferences of users. I was using SQLite before and it was cumbersome. I had to make a table to save just few key-value pairs. Android SDK comes with an API called android ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/easy-caching-in-android" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
