--- a/gsoc14-third-week.html
+++ b/gsoc14-third-week.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc14-third-week" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | GSoC&#8216;14: Third&nbsp;week" />
+        <meta property="og:title" content="Shortlog | GSoC‘14: Third week" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="It was another not so productive week but I learnt a lot regarding how to write new classes by extending classes like Basic, Symbol and Expr. Last week got stuck with the rewrite expression mechanism which turned out to be a bug in the core. Thanks to Sean for the ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | GSoC&#8216;14: Third&nbsp;week" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | GSoC‘14: Third week" />
+        <meta name="twitter:description" content="It was another not so productive week but I learnt a lot regarding how to write new classes by extending classes like Basic, Symbol and Expr. Last week got stuck with the rewrite expression mechanism which turned out to be a bug in the core. Thanks to Sean for the ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-third-week" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
