--- a/gsoc14-week-10-adding-more-to-utils.html
+++ b/gsoc14-week-10-adding-more-to-utils.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc14-week-10-adding-more-to-utils" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | GSoC&#8216;14 Week 10: Adding more to&nbsp;utils" />
+        <meta property="og:title" content="Shortlog | GSoC‘14 Week 10: Adding more to utils" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="This week I worked on adding more utility function in optics. Some of them are yet to be added. I’ll send a pull request once I write tests for them. Here’s the link to the code pushed till now: https://github.com/debugger22/sympy/compare/util-funcs I also ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 Week 10: Adding more to&nbsp;utils" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | GSoC‘14 Week 10: Adding more to utils" />
+        <meta name="twitter:description" content="This week I worked on adding more utility function in optics. Some of them are yet to be added. I’ll send a pull request once I write tests for them. Here’s the link to the code pushed till now: https://github.com/debugger22/sympy/compare/util-funcs I also ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-week-10-adding-more-to-utils" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
