--- a/memory-error-due-to-charge-leak-acceleration-in-dram.html
+++ b/memory-error-due-to-charge-leak-acceleration-in-dram.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/memory-error-due-to-charge-leak-acceleration-in-dram" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | Memory Error due to charge leak acceleration in <span class="caps">DRAM</span>" />
+        <meta property="og:title" content="Shortlog | Memory Error due to charge leak acceleration in DRAM" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="DRAM comprises a two-dimensional array of DRAM cells, each of which consists of a capacitor and an access-transistor. Depending on whether its capacitor is fully charged or fully discharged, a cell is in either the charged state or the discharged state, respectively. These two states are used to represent a ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | Memory Error due to charge leak acceleration in <span class="caps">DRAM</span>" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | Memory Error due to charge leak acceleration in DRAM" />
+        <meta name="twitter:description" content="DRAM comprises a two-dimensional array of DRAM cells, each of which consists of a capacitor and an access-transistor. Depending on whether its capacitor is fully charged or fully discharged, a cell is in either the charged state or the discharged state, respectively. These two states are used to represent a ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/memory-error-due-to-charge-leak-acceleration-in-dram" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
