--- a/binpy-n-bit-ripple-counter.html
+++ b/binpy-n-bit-ripple-counter.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/binpy-n-bit-ripple-counter" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | BinPy: N Bit Ripple&nbsp;Counter" />
+        <meta property="og:title" content="Shortlog | BinPy: N Bit Ripple Counter" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="BinPy is almost ready to create things. This post focuses on building a ripple counter using it. Theory A ripple counter is an asynchronous counter where only the first flip-flop is clocked by an external clock. All subsequent flip-flops are clocked by the output of the preceding flip-flop. Asynchronous counters ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | BinPy: N Bit Ripple&nbsp;Counter" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | BinPy: N Bit Ripple Counter" />
+        <meta name="twitter:description" content="BinPy is almost ready to create things. This post focuses on building a ripple counter using it. Theory A ripple counter is an asynchronous counter where only the first flip-flop is clocked by an external clock. All subsequent flip-flops are clocked by the output of the preceding flip-flop. Asynchronous counters ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/binpy-n-bit-ripple-counter" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
