--- a/gsoc-14-first-week.html
+++ b/gsoc-14-first-week.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc-14-first-week" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | GSoC 14: First&nbsp;Week" />
+        <meta property="og:title" content="Shortlog | GSoC 14: First Week" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="The first week of GSoC is going to end very soon. I started working very late this week because of some issues. I spent most of my time in reading books on optics. Due to a dependency for 3D geometry, which will take some more time, I changed my timeline ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | GSoC 14: First&nbsp;Week" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | GSoC 14: First Week" />
+        <meta name="twitter:description" content="The first week of GSoC is going to end very soon. I started working very late this week because of some issues. I spent most of my time in reading books on optics. Due to a dependency for 3D geometry, which will take some more time, I changed my timeline ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc-14-first-week" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
