--- a/gsoc14-progress-finished-refraction-at-planar-surface.html
+++ b/gsoc14-progress-finished-refraction-at-planar-surface.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc14-progress-finished-refraction-at-planar-surface" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | GSoC&#8216;14 Progress: Finished refraction at planar&nbsp;surface" />
+        <meta property="og:title" content="Shortlog | GSoC‘14 Progress: Finished refraction at planar surface" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="I’m sorry for this delayed post. I couldn’t work last week due to some other issues so had nothing much to report. This week I completed refraction function for planar surface, fixed some bugs and wrote tests for it. I also added a function to calculate angle of ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 Progress: Finished refraction at planar&nbsp;surface" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | GSoC‘14 Progress: Finished refraction at planar surface" />
+        <meta name="twitter:description" content="I’m sorry for this delayed post. I couldn’t work last week due to some other issues so had nothing much to report. This week I completed refraction function for planar surface, fixed some bugs and wrote tests for it. I also added a function to calculate angle of ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-finished-refraction-at-planar-surface" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
