--- a/gsoc14-progress-finishing-twave.html
+++ b/gsoc14-progress-finishing-twave.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc14-progress-finishing-twave" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | GSoC&#8216;14 Progress: Finishing&nbsp;TWave" />
+        <meta property="og:title" content="Shortlog | GSoC‘14 Progress: Finishing TWave" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="This last week most of the coding I did was only related to transverse wave. It has already been merged into the master. https://github.com/sympy/sympy/pull/7518 Here is the class structure of the TWave Inherits ======== Expr Arguments ========= amplitude : Sympifyable Amplitude of the wave. frequency : Sympifyable Frequency ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 Progress: Finishing&nbsp;TWave" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | GSoC‘14 Progress: Finishing TWave" />
+        <meta name="twitter:description" content="This last week most of the coding I did was only related to transverse wave. It has already been merged into the master. https://github.com/sympy/sympy/pull/7518 Here is the class structure of the TWave Inherits ======== Expr Arguments ========= amplitude : Sympifyable Amplitude of the wave. frequency : Sympifyable Frequency ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-finishing-twave" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
