--- a/gsoc14-progress-week-5.html
+++ b/gsoc14-progress-week-5.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-5" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | GSoC&#8216;14 progress, Week&nbsp;5" />
+        <meta property="og:title" content="Shortlog | GSoC‘14 progress, Week 5" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="I did good amount of work this week. I sent a small part of it related to ray tracing for review. https://github.com/sympy/sympy/pull/7626 I got some great suggestions from Sean to make it compatible directly withTWave class. It is a WIP as I’m ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 progress, Week&nbsp;5" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | GSoC‘14 progress, Week 5" />
+        <meta name="twitter:description" content="I did good amount of work this week. I sent a small part of it related to ray tracing for review. https://github.com/sympy/sympy/pull/7626 I got some great suggestions from Sean to make it compatible directly withTWave class. It is a WIP as I’m ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-5" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
