--- a/gsoc14-progress-week-6.html
+++ b/gsoc14-progress-week-6.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-6" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | GSoC&#8216;14 progress: Week&nbsp;6" />
+        <meta property="og:title" content="Shortlog | GSoC‘14 progress: Week 6" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="It was a busy week though I managed to do some work. I’ve been working on following things: Integrating TWave with refraction_angle(7626) Interference class Some blocking 3D geometry code got merged yesterday which gives me a lot of new things to work on. :) I also tried to take ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | GSoC&#8216;14 progress: Week&nbsp;6" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | GSoC‘14 progress: Week 6" />
+        <meta name="twitter:description" content="It was a busy week though I managed to do some work. I’ve been working on following things: Integrating TWave with refraction_angle(7626) Interference class Some blocking 3D geometry code got merged yesterday which gives me a lot of new things to work on. :) I also tried to take ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/gsoc14-progress-week-6" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
