--- a/moving-to-a-static-site-generator.html
+++ b/moving-to-a-static-site-generator.html
@@ -8,12 +8,13 @@
 
         <meta property="og:url" content="http://www.sudhanshumishra.in/moving-to-a-static-site-generator" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Shortlog | Moving to a static site&nbsp;generator" />
+        <meta property="og:title" content="Shortlog | Moving to a static site generator" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
+        <meta property="og:description" content="Finally I moved to a static site generator for my homepage + blog. Previously, I was using blogger which was really annoying when writing a technical post. Code formatting was bizarre! Of all the static website generators I chose Pelican. It is written in Python and it doesn’t require any ..." />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@debugger22" />
-        <meta name="twitter:title" content="Shortlog | Moving to a static site&nbsp;generator" />
-        <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
+        <meta name="twitter:title" content="Shortlog | Moving to a static site generator" />
+        <meta name="twitter:description" content="Finally I moved to a static site generator for my homepage + blog. Previously, I was using blogger which was really annoying when writing a technical post. Code formatting was bizarre! Of all the static website generators I chose Pelican. It is written in Python and it doesn’t require any ..." />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
         <meta name="twitter:url" content="http://www.sudhanshumishra.in/moving-to-a-static-site-generator" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
