--- a/gsoc14-progress-week-4-finished-medium-working-on-fermats-principle-and-snells-law.html
+++ b/gsoc14-progress-week-4-finished-medium-working-on-fermats-principle-and-snells-law.html
@@ -124,6 +124,7 @@ principle and Snell&#8217;s law part of the code and send a <span class="caps">P
                 <address id="about" class="vcard body">
                 Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
+                <p><a href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
 
     <script type="text/javascript">
