--- a/gsoc14-progress-week-6.html
+++ b/gsoc14-progress-week-6.html
@@ -109,6 +109,7 @@ thank <a href="https://github.com/flacjacket">Sean</a>, <a href="https://githu
                 <address id="about" class="vcard body">
                 Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
+                <p><a href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
 
     <script type="text/javascript">
