--- a/setting-up-tornado-server-on-ubuntu-1204.html
+++ b/setting-up-tornado-server-on-ubuntu-1204.html
@@ -177,6 +177,7 @@ computing server for online version of <a href="http://www.binpy.org/">Binpy</a>
                 <address id="about" class="vcard body">
                 Contents &copy; 2014-2015 Sudhanshu Mishra.
                 </address><!-- /#about -->
+                <p><a href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
 
     <script type="text/javascript">
