--- a/authors.html
+++ b/authors.html
@@ -62,6 +62,16 @@
                 <p><a target="_blank" href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
 
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-61714694-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+    </script>
 <script type="text/javascript">
     var disqus_shortname = 'newgithubpagesblog';
     (function () {
