Add flickr photostream

--- a/categories.html
+++ b/categories.html
@@ -45,6 +45,7 @@
 
                             <li><a href="https://github.com/debugger22">GitHub</a></li>
                             <li><a href="https://twitter.com/debugger22">Twitter</a></li>
+                            <li><a href="https://www.flickr.com/photos/132975952@N07/">Flickr</a></li>
                             <li><a href="http://www.last.fm/user/debugger22">Last.fm</a></li>
                         </ul>
                 </div><!-- /.social -->
