Add link to so profile

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -41,7 +41,7 @@
 <li>Twitter: <a href="https://twitter.com/debugger22">https://twitter.com/debugger22</a></li>
 </ul>
 <p>My old blog is located <a href="http://blog.sudhanshumishra.in/">here</a>.</p>
-<p>My stack<strong>overflow</strong> profile:</p>
+<p>My stack<strong>overflow</strong> <a href="https://stackoverflow.com/users/2083053/sudhanshu-mishra">profile</a>:</p>
 <p><img alt="so" src="https://stackoverflow.com/users/flair/2083053.png?theme=clean" /></p>
 </section>
         <section id="extras" class="body">
