Add blog post for second week

--- a/archives.html
+++ b/archives.html
@@ -32,6 +32,8 @@
 <h1>Archives for Shortlog</h1>
 
 <dl>
+    <dt>Tue 09 June 2015</dt>
+    <dd><a href="http://www.sudhanshumishra.in/posts/gsoc15-week-two/">GSoC'15: Week two</a></dd>
     <dt>Fri 05 June 2015</dt>
     <dd><a href="http://www.sudhanshumishra.in/posts/gsoc15-week-one/">GSoC'15: Week one</a></dd>
     <dt>Fri 01 May 2015</dt>
