Add another post

--- a/archives.html
+++ b/archives.html
@@ -26,16 +26,17 @@
                 <nav><ul>
                     <li><a href="http://www.sudhanshumishra.in/about-me/">About Me</a></li>
                     <li><a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
+                    <li><a href="http://www.sudhanshumishra.in/category/work.html">Work</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Shortlog</h1>
 
 <dl>
+    <dt>Sun 17 January 2016</dt>
+    <dd><a href="http://www.sudhanshumishra.in/posts/first-job-cityflo/">First Job; Last Few Days at Campus</a></dd>
     <dt>Tue 14 July 2015</dt>
     <dd><a href="http://www.sudhanshumishra.in/posts/gsoc15-fourth-biweekly-update/">GSoC'15: Fourth biweekly update</a></dd>
-    <dt>Wed 01 July 2015</dt>
-    <dd><a href="http://www.sudhanshumishra.in/posts/gsoc15-midterm-updates/">GSoC'15: Mixing both assumption systems, Midterm updates</a></dd>
     <dt>Tue 09 June 2015</dt>
     <dd><a href="http://www.sudhanshumishra.in/posts/gsoc15-week-two/">GSoC'15: Week two</a></dd>
     <dt>Fri 05 June 2015</dt>
@@ -66,7 +67,7 @@
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015-2016 Sudhanshu Mishra.
                 </address><!-- /#about -->
                 <p><a target="_blank" href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
