--- a/categories.html
+++ b/categories.html
@@ -26,10 +26,12 @@
                 <nav><ul>
                     <li><a href="http://www.sudhanshumishra.in/about-me/">About Me</a></li>
                     <li><a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
+                    <li><a href="http://www.sudhanshumishra.in/category/work.html">Work</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
+    <li><a href="http://www.sudhanshumishra.in/category/work.html">Work</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
@@ -53,7 +55,7 @@
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Contents &copy; 2015 Sudhanshu Mishra.
+                Contents &copy; 2015-2016 Sudhanshu Mishra.
                 </address><!-- /#about -->
                 <p><a target="_blank" href="https://feedburner.google.com/fb/a/mailverify?uri=Shortlog&amp;loc=en_US">Subscribe to Shortlog by Email</a></p>
         </footer><!-- /#contentinfo -->
