--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
         <meta charset="utf-8" />
         <title>Shortlog</title>
-        <link rel="stylesheet" href="http://www.sudhanshumishra.in/theme/css/main.css" />
-        <link href="http://www.sudhanshumishra.in/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Shortlog Atom Feed" />
+        <link rel="stylesheet" href="https://www.sudhanshumishra.in/theme/css/main.css" />
+        <link href="https://www.sudhanshumishra.in/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Shortlog Atom Feed" />
 
-        <meta property="og:url" content="http://www.sudhanshumishra.in" />
+        <meta property="og:url" content="https://www.sudhanshumishra.in" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Shortlog" />
         <meta property="og:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
@@ -16,7 +16,7 @@
         <meta name="twitter:title" content="Shortlog" />
         <meta name="twitter:description" content="A blog by Sudhanshu Mishra" />
         <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/2821646?v=3&s=200" />
-        <meta name="twitter:url" content="http://www.sudhanshumishra.in/" />
+        <meta name="twitter:url" content="https://www.sudhanshumishra.in/" />
         <meta name="keywords" content="sudhanshu mishra, programming, blog" />
 </head>
 
@@ -24,9 +24,9 @@
         <header id="banner" class="body">
                 <h1><a href="http://www.sudhanshumishra.in/">Shortlog </a></h1>
                 <nav><ul>
-                    <li><a href="http://www.sudhanshumishra.in/about-me/">About Me</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
-                    <li><a href="http://www.sudhanshumishra.in/category/work.html">Work</a></li>
+                    <li><a href="https://www.sudhanshumishra.in/about-me/">About Me</a></li>
+                    <li><a href="https://www.sudhanshumishra.in/category/gsoc.html">GSoC</a></li>
+                    <li><a href="https://www.sudhanshumishra.in/category/work.html">Work</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -38,8 +38,8 @@
                 Published: Sun 17 January 2016
         </abbr>
 
-<p>In <a href="http://www.sudhanshumishra.in/category/work.html">Work</a>. </p>
-<p>tags: <a href="http://www.sudhanshumishra.in/posts/tags/job/">job</a> <a href="http://www.sudhanshumishra.in/posts/tags/python/">python</a> </p>
+<p>In <a href="https://www.sudhanshumishra.in/category/work.html">Work</a>. </p>
+<p>tags: <a href="https://www.sudhanshumishra.in/posts/tags/job/">job</a> <a href="http://www.sudhanshumishra.in/posts/tags/python/">python</a> </p>
 </footer><!-- /.post-info --><p>It's been several months since my last post here. GSoC went pretty well this year. There are still a lot of work to be done in assumptions. Moreover, after finishing my five months long practice school at <i>Ernst &amp; Young LLP, Chennai</i> I came back to campus for <i>placements</i>.</p>
 <p>On 10th Jan 2016, I got selected in a company called <a href="https://cityflo.com/">Cityflo</a> which is based out of Mumbai. Cityflo is an urban transportation startup focused on solving the daily commute problem using technology and data. My work over there will be involving primarily Python. I'm really excited about it.</p>
 <p>On the other hand, this placement marks the end of my campus life at BITS. I'll be leaving for home in a couple of days. Graduating in 3.5 years wasn't really difficult. <i>Besides, it leaves you with an extra 5 months in your life!</i> I'll hopefully use it to explore some places before I join Cityflo in early March. I enjoyed my time at BITS and learnt invaluable lessons.</p>
